--- a/src/components/App.css
+++ b/src/components/App.css
@@ -23,6 +23,15 @@
 }
 
 @keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.redBack {
+  background-color: red !important;
+  color: purple !important;
 }
