Commit 4: Time total 6.5hrs, mostly working for single month

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -33,5 +33,7 @@
 
 .redBack {
   background-color: red !important;
-  color: purple !important;
+}
+.redBack:hover {
+  background-color: pink !important;
 }
