Commit 5 - All but disabling working, holidays working.

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -37,3 +37,9 @@
 .redBack:hover {
   background-color: pink !important;
 }
+.purpleBack {
+  background-color: purple !important;
+}
+.purpleBack:hover {
+  background-color: #bf5fff !important;
+}
